[package]
name = "srgn"
version = "0.12.0"
edition = "2021"
authors = ["Alex Povel <rust@alexpovel.de>"]
description = "A code surgeon for precise text and code transplantation"
license = "MIT"
repository = "https://github.com/alexpovel/srgn"
readme = "README.md"
documentation = "https://docs.rs/srgn"
keywords = ["symbols", "unicode", "substitute", "parse", "umlaut"]
categories = [
    "accessibility",
    "internationalization",
    "localization",
    "text-processing",
    "value-formatting",
]
rust-version = "1.74.1"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
cached = { version = "0.44.0", optional = true }
clap = { version = "4.4.0", features = ["derive", "env", "string"] }
clap_complete = "4.4.10"
const_format = "0.2.32"
decompound = { version = "0.3.0", optional = true }
env_logger = "0.10.0"
fancy-regex = "0.11.0"
fst = { version = "0.4.7", optional = true }
glob = "0.3.1"
itertools = "0.11.0"
log = "0.4.20"
once_cell = { version = "1.18.0", optional = true }
rayon = "1.7.0"
titlecase = "2.2.1"
tree-sitter = "0.20.10"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-go = "0.20.0"
tree-sitter-python = "0.20.4"
tree-sitter-rust = "0.20.4"
tree-sitter-typescript = "0.20.2"
unescape = "0.1.0"
unicode-normalization = "0.1.22"
unicode_categories = "0.1.1"
unicode_titlecase = "2.2.1"

[features]
all = ["german", "symbols"]
default = ["all"]
german = ["cached", "decompound", "fst", "once_cell"]
symbols = []

[dev-dependencies]
assert_cmd = "2.0.12"
comrak = "0.18.0"
enum-iterator = "1.4.1"
glob = "0.3.1"
insta = { version = "1.31.0", features = ["yaml"] }
nom = "7.1.3"
num_cpus = "1.16.0"
pretty_assertions = "1.4.0"
proptest = "1.2.0"
rand = "0.8.5"
rand_regex = "0.16.0"
rstest = "0.18.2"
serde = { version = "1.0.188", features = ["derive"] }
serial_test = "2.0.0"
tempfile = "3.10.1"
test-log = "0.2.12"

[profile.dev.package.insta]
# https://insta.rs/docs/quickstart/#optional-faster-runs
opt-level = 3

[profile.dev.package.similar]
# https://insta.rs/docs/quickstart/#optional-faster-runs
opt-level = 3

[build-dependencies]
decompound = "0.3.0"
fst = "0.4.7"
rayon = "1.7.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
