[package]
name = "srgn"
version = "0.12.0"
edition = "2021"
authors = ["Alex Povel <rust@alexpovel.de>"]
description = "A code surgeon for precise text and code transplantation"
license = "MIT"
repository = "https://github.com/alexpovel/srgn"
readme = "README.md"
documentation = "https://docs.rs/srgn"
keywords = ["symbols", "unicode", "substitute", "parse", "umlaut"]
categories = [
    "accessibility",
    "internationalization",
    "localization",
    "text-processing",
    "value-formatting",
]
rust-version = "1.79.0"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
cached = { version = "0.53.0", optional = true, default-features = false, features = [
    "ahash",
    "proc_macro",
] }
clap = { version = "4.4.0", features = ["derive", "env", "string"] }
clap_complete = "4.4.10"
colored = "2.1.0"
const_format = "0.2.32"
decompound = { version = "0.3.0", optional = true }
env_logger = { version = "0.10.0", default-features = false, features = [
    "auto-color",
] }
fancy-regex = "0.11.0"
fst = { version = "0.4.7", optional = true }
glob = "0.3.1"
grep-cli = "0.1.10"
ignore = "0.4.22"
itertools = "0.11.0"
log = "0.4.20"
once_cell = { version = "1.18.0", optional = true }
pathdiff = "0.2.1"
tempfile = "3.10.1"
titlecase = "2.2.1"
tree-sitter = "0.22.6"
tree-sitter-c-sharp = "0.21.2"
tree-sitter-go = "0.21.0"
tree-sitter-hcl = { git = "https://github.com/alexpovel/tree-sitter-hcl.git" }
tree-sitter-python = "0.21.0"
tree-sitter-rust = "0.21.2"
tree-sitter-typescript = "0.21.1"
unescape = "0.1.0"
unicode-normalization = "0.1.22"
unicode_categories = "0.1.1"
unicode_titlecase = "2.2.1"

[features]
all = ["german", "symbols"]
default = ["all"]
german = ["cached", "decompound", "fst", "once_cell"]
symbols = []

[dev-dependencies]
assert_cmd = "2.0.12"
comrak = { version = "0.18.0", default-features = false }
enum-iterator = "1.4.1"
insta = { version = "1.31.0", features = ["yaml", "filters"] }
nom = "7.1.3"
pretty_assertions = "1.4.0"
proptest = "1.2.0"
rand = "0.8.5"
rand_regex = "0.16.0"
rstest = { version = "0.18.2", default-features = false }
serde = { version = "1.0.188", features = ["derive"], default-features = false }

[profile.dev.package.insta]
# https://insta.rs/docs/quickstart/#optional-faster-runs
opt-level = 3

[profile.dev.package.similar]
# https://insta.rs/docs/quickstart/#optional-faster-runs
opt-level = 3

[build-dependencies]
decompound = "0.3.0"
fst = "0.4.7"
rayon = "1.7.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
