[package]
name = "betterletter"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "0.43.0"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
num_cpus = "1.15.0"

[features]
default = ["all"]
all = ["de", "symbols"]
de = []
symbols = []

[dev-dependencies]
assert_cmd = "2.0.11"
criterion = { version = "0.4.0", features = ["html_reports"] }
insta = { version = "1.29.0", features = ["yaml"] }
paste = "1.0.12"
rstest = "0.17.0"
serde = { version = "1.0.163", features = ["derive"] }
instrament = { path = "../instrament" }
glob = "0.3.1"

[[bench]]
name = "benchmark"
harness = false
