[package]
name = "betterletters"
version = "0.1.0"
edition = "2021"
authors = ["Alex Povel <rust@alexpovel.de>"]
description = "Substitute alternative, ASCII-only spellings of special characters with their Unicode equivalents."
license-file = "LICENSE"
repository = "https://github.com/alexpovel/betterletters"
readme = "README.md"
documentation = "https://docs.rs/betterletters"
keywords = ["spelling", "umlaut", "substitute", "unicode", "alternative"]
categories = [
    "accessibility",
    "internationalization",
    "localization",
    "text-processing",
    "value-formatting",
]

[dependencies]
cached = "0.43.0"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
common = { path = "../common" }
unicode_titlecase = "2.0.0"
fst = "0.4.7"
once_cell = "1.18.0"

[features]
default = ["all"]
all = ["de", "symbols"]
de = []
symbols = []

[dev-dependencies]
assert_cmd = "2.0.11"
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = { version = "1.29.0", features = ["yaml"] }
paste = "1.0.12"
rstest = "0.17.0"
serde = { version = "1.0.163", features = ["derive"] }
glob = "0.3.1"
num_cpus = "1.15.0"

[build-dependencies]
common = { path = "../common" }
fst = "0.4.7"

[[bench]]
name = "threading"
harness = false
